# tak-position-generator-frontend

./: .gitignore  README.md  index.html  index.js
wasm-position-generator/: Cargo.toml
wasm-position-generator/src/: lib.rs
